# Sql_automation

./: .env  Config.py  Generate_response.py  Refactor.py  main.py  pyproject.toml
Apis/: Login.py  Signin.py  getUser.py  jwt_helper.py  sql_response.py
